--- a/templates/userHome.html
+++ b/templates/userHome.html
@@ -1,10 +1,182 @@
 <!DOCTYPE html>
-<html lang="en">
+{% load static %}
+<html>
+
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+  <!-- Basic -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <!-- Mobile Metas -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <!-- Site Metas -->
+  <meta name="keywords" content="" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+
+  <title>_projectSM</title>
+
+  <!-- slider stylesheet -->
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
+
+  <!-- bootstrap core css -->
+  <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}" />
+
+  <!-- fonts style -->
+  <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan|Dosis:400,600,700|Poppins:400,600,700&display=swap" rel="stylesheet" />
+  <!-- Custom styles for this template -->
+  <link href="{% static 'css/style.css' %}" rel="stylesheet" />
+  <!-- responsive style -->
+  <link href="{% static 'css/responsive.css' %}" rel="stylesheet" />
 </head>
+
 <body>
-$END$
+
+  <div class="hero_area">
+    <!-- header section strats -->
+    <header class="header_section">
+      <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg custom_nav-container">
+          <a class="navbar-brand" href="index.html">
+            <span>
+             User home page
+            </span>
+          </a>
+
+          <div class="navbar-collapse" id="">
+            <div class="d-none d-lg-flex ml-auto flex-column flex-lg-row align-items-center mt-3">
+              <ul class="navbar-nav ">
+                <li class="nav-item">
+                </li>
+              </ul>
+<!--              <form class="form-inline mb-3 mb-lg-0  mr-5">-->
+<!--                <button class="btn  my-sm-0 nav_search-btn" type="submit"></button>-->
+<!--              </form>-->
+            </div>
+
+<!--            <div class="custom_menu-btn">-->
+<!--              <button onclick="openNav()">-->
+<!--                <span class="s-1"> </span>-->
+<!--                <span class="s-2"> </span>-->
+<!--                <span class="s-3"> </span>-->
+<!--              </button>-->
+<!--            </div>-->
+<!--            <div id="myNav" class="overlay">-->
+<!--              <div class="overlay-content">-->
+<!--                <a href="index.html">Home</a>-->
+<!--                <a href="about.html">About</a>-->
+<!--                <a href="business.html">Business</a>-->
+<!--                <a href="more.html">More</a>-->
+<!--              </div>-->
+<!--            </div>-->
+          </div>
+        </nav>
+      </div>
+    </header>
+
+  </div>
+  <!-- end about section -->
+  <section class="make_section layout_padding">
+    <div class="container">
+      <div class="box">
+       At Suchitwa Mission, our goal is to revolutionize plastic collection in Panchayats through digital transformation. Our project entails the development of a user-friendly website with a range of features aimed at streamlining plastic collection efforts and raising awareness about plastic pollution. These features include a collection schedule dashboard, alert system, secure payment gateway, educational resources, and an admin panel for efficient management. By integrating modules for users, administrators, and monitoring, our platform facilitates seamless coordination in plastic collection activities. Join us in our mission to make a positive impact on the environment and create a cleaner, healthier future for all.
+      </div>
+    </div>
+  </section>
+
+
+  <!-- info section -->
+  <section class="info_section layout_padding">
+
+
+    <div class="container">
+      <h4>
+        Contact us
+      </h4>
+      <div class="info_items">
+        <a href="">
+          <div class="item ">
+            <div class="img-box box-1">
+              <img src="" alt="">
+            </div>
+            <div class="detail-box">
+              <p>
+                Lorem Ipsum is simply dummy text
+              </p>
+            </div>
+          </div>
+        </a>
+        <a href="">
+          <div class="item ">
+            <div class="img-box box-2">
+              <img src="" alt="">
+            </div>
+            <div class="detail-box">
+              <p>
+                +02 1234567890
+              </p>
+            </div>
+          </div>
+        </a>
+        <a href="">
+          <div class="item ">
+            <div class="img-box box-3">
+              <img src="" alt="">
+            </div>
+            <div class="detail-box">
+              <p>
+                demo@gmail.com
+              </p>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="partner-box">
+      <h4>
+        Our Partner
+      </h4>
+<!--      <div class="box">-->
+<!--        <a href="">-->
+<!--          <img src="{% static 'images/google.png' %}" alt="">-->
+<!--        </a>-->
+<!--        <a href="">-->
+<!--          <img src="{% static 'images/yahoo.png' %}" alt="">-->
+<!--        </a>-->
+<!--        <a href="">-->
+<!--          <img src="{% static 'images/mastercard.png' %}" alt="">-->
+<!--        </a>-->
+<!--        <a href="">-->
+<!--          <img src="{% static 'images/jcb.png' %}" alt="">-->
+<!--        </a>-->
+<!--      </div>-->
+    </div>
+  </section>
+
+
+
+  <!-- end info_section -->
+
+  <!-- footer section -->
+  <section class="container-fluid footer_section">
+<!--    <p>-->
+<!--      &copy; 2020 All Rights Reserved. Design by-->
+<!--      <a href="https://html.design/">Free Html Templates</a> Distribution <a href="https://themewagon.com">ThemeWagon</a>-->
+<!--    </p>-->
+<!--  </section>-->
+<!--  &lt;!&ndash; footer section &ndash;&gt;-->
+
+<!--  <script type="text/javascript" src="{% static 'js/jquery-3.4.1.min.js' %}"></script>-->
+<!--  <script type="text/javascript" src="{% static 'js/bootstrap.js' %}"></script>-->
+
+<!--  <script>-->
+<!--    function openNav() {-->
+<!--      document.getElementById("myNav").classList.toggle("menu_width");-->
+<!--      document-->
+<!--        .querySelector(".custom_menu-btn")-->
+<!--        .classList.toggle("menu_btn-style");-->
+<!--    }-->
+  </script>
+      </section>
 </body>
+
 </html>
