--- a/templates/adminIndex.html
+++ b/templates/adminIndex.html
@@ -3,10 +3,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">  
-  <link rel="shortcut icon" href="./img/fav.png" type="image/x-icon">  
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="shortcut icon" href="./img/fav.png" type="image/x-icon">
   <link rel="stylesheet" href="https://kit-pro.fontawesome.com/releases/v5.12.1/css/pro.min.css">
   <link rel="stylesheet" type="text/css" href="{% static 'adminstatic/css/style.css' %}">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <title>Welcome To Cleopatra</title>
 </head>
 <body class="bg-gray-100">
@@ -14,18 +15,17 @@
 
 <!-- start navbar -->
 <div class="md:fixed md:w-full md:top-0 md:z-20 flex flex-row flex-wrap items-center bg-white p-6 border-b border-gray-300">
-    
+
     <!-- logo -->
     <div class="flex-none w-56 flex flex-row items-center">
-      <img src="{% static 'adminstatic/img/logo.png' %}" class="w-10 flex-none">
-      <strong class="capitalize ml-1 flex-1">cleopatra</strong>
+      <strong class="capitalize ml-1 flex-1">Admin Dashboard</strong>
 
       <button id="sliderBtn" class="flex-none text-right text-gray-900 hidden md:block">
         <i class="fad fa-list-ul"></i>
       </button>
     </div>
-    <!-- end logo -->   
-    
+    <!-- end logo -->
+
     <!-- navbar content toggle -->
     <button id="navbarToggle" class="hidden md:block md:fixed right-0 mr-6">
       <i class="fad fa-chevron-double-down"></i>
@@ -36,15 +36,15 @@
     <div id="navbar" class="animated md:hidden md:fixed md:top-0 md:w-full md:left-0 md:mt-16 md:border-t md:border-b md:border-gray-200 md:p-10 md:bg-white flex-1 pl-3 flex flex-row flex-wrap justify-between items-center md:flex-col md:items-center">
       <!-- left -->
       <div class="text-gray-600 md:w-full md:flex md:flex-row md:justify-evenly md:pb-10 md:mb-10 md:border-b md:border-gray-200">
-        <a class="mr-2 transition duration-500 ease-in-out hover:text-gray-900" href="#" title="email"><i class="fad fa-envelope-open-text"></i></a>        
-        <a class="mr-2 transition duration-500 ease-in-out hover:text-gray-900" href="#" title="email"><i class="fad fa-comments-alt"></i></a>        
-        <a class="mr-2 transition duration-500 ease-in-out hover:text-gray-900" href="#" title="email"><i class="fad fa-check-circle"></i></a>        
-        <a class="mr-2 transition duration-500 ease-in-out hover:text-gray-900" href="#" title="email"><i class="fad fa-calendar-exclamation"></i></a>        
+<!--        <a class="mr-2 transition duration-500 ease-in-out hover:text-gray-900" href="#" title="email"><i class="fad fa-envelope-open-text"></i></a>        -->
+<!--        <a class="mr-2 transition duration-500 ease-in-out hover:text-gray-900" href="#" title="email"><i class="fad fa-comments-alt"></i></a>        -->
+<!--        <a class="mr-2 transition duration-500 ease-in-out hover:text-gray-900" href="#" title="email"><i class="fad fa-check-circle"></i></a>        -->
+<!--        <a class="mr-2 transition duration-500 ease-in-out hover:text-gray-900" href="#" title="email"><i class="fad fa-calendar-exclamation"></i></a>        -->
       </div>
-      <!-- end left -->      
+      <!-- end left -->
 
       <!-- right -->
-      <div class="flex flex-row-reverse items-center"> 
+      <div class="flex flex-row-reverse items-center">
 
         <!-- user -->
         <div class="dropdown relative md:static">
@@ -52,12 +52,12 @@
           <button class="menu-btn focus:outline-none focus:shadow-outline flex flex-wrap items-center">
             <div class="w-8 h-8 overflow-hidden rounded-full">
               <img class="w-full h-full object-cover" src="{% static 'adminstatic/img/user.svg' %}" >
-            </div> 
+            </div>
 
             <div class="ml-2 capitalize flex ">
               <h1 class="text-sm text-gray-800 font-semibold m-0 p-0 leading-none">moeSaid</h1>
               <i class="fad fa-chevron-down ml-2 text-xs leading-none"></i>
-            </div>                        
+            </div>
           </button>
 
           <button class="hidden fixed top-0 left-0 z-10 w-full h-full menu-overflow"></button>
@@ -66,39 +66,39 @@
 
             <!-- item -->
             <a class="px-4 py-2 block capitalize font-medium text-sm tracking-wide bg-white hover:bg-gray-200 hover:text-gray-900 transition-all duration-300 ease-in-out" href="#">
-              <i class="fad fa-user-edit text-xs mr-1"></i> 
+              <i class="fad fa-user-edit text-xs mr-1"></i>
               edit my profile
-            </a>     
+            </a>
             <!-- end item -->
 
             <!-- item -->
             <a class="px-4 py-2 block capitalize font-medium text-sm tracking-wide bg-white hover:bg-gray-200 hover:text-gray-900 transition-all duration-300 ease-in-out" href="#">
-              <i class="fad fa-inbox-in text-xs mr-1"></i> 
+              <i class="fad fa-inbox-in text-xs mr-1"></i>
               my inbox
-            </a>     
+            </a>
             <!-- end item -->
 
             <!-- item -->
             <a class="px-4 py-2 block capitalize font-medium text-sm tracking-wide bg-white hover:bg-gray-200 hover:text-gray-900 transition-all duration-300 ease-in-out" href="#">
-              <i class="fad fa-badge-check text-xs mr-1"></i> 
+              <i class="fad fa-badge-check text-xs mr-1"></i>
               tasks
-            </a>     
+            </a>
             <!-- end item -->
 
             <!-- item -->
             <a class="px-4 py-2 block capitalize font-medium text-sm tracking-wide bg-white hover:bg-gray-200 hover:text-gray-900 transition-all duration-300 ease-in-out" href="#">
-              <i class="fad fa-comment-alt-dots text-xs mr-1"></i> 
+              <i class="fad fa-comment-alt-dots text-xs mr-1"></i>
               chats
-            </a>     
+            </a>
             <!-- end item -->
 
             <hr>
 
             <!-- item -->
             <a class="px-4 py-2 block capitalize font-medium text-sm tracking-wide bg-white hover:bg-gray-200 hover:text-gray-900 transition-all duration-300 ease-in-out" href="#">
-              <i class="fad fa-user-times text-xs mr-1"></i> 
+              <i class="fad fa-user-times text-xs mr-1"></i>
               log out
-            </a>     
+            </a>
             <!-- end item -->
 
           </div>
@@ -109,7 +109,7 @@
         <div class="dropdown relative mr-5 md:static">
 
           <button class="text-gray-500 menu-btn p-0 m-0 hover:text-gray-900 focus:text-gray-900 focus:outline-none transition-all ease-in-out duration-300">
-            <i class="fad fa-bells"></i>               
+            <i class="fad fa-bells"></i>
           </button>
 
           <button class="hidden fixed top-0 left-0 z-10 w-full h-full menu-overflow"></button>
@@ -220,7 +220,7 @@
                 view all
               </a>
             </div>
-            <!-- end bottom -->            
+            <!-- end bottom -->
           </div>
         </div>
         <!-- end notifcation -->
@@ -229,7 +229,7 @@
         <div class="dropdown relative mr-5 md:static">
 
           <button class="text-gray-500 menu-btn p-0 m-0 hover:text-gray-900 focus:text-gray-900 focus:outline-none transition-all ease-in-out duration-300">
-            <i class="fad fa-comments"></i>               
+            <i class="fad fa-comments"></i>
           </button>
 
           <button class="hidden fixed top-0 left-0 z-10 w-full h-full menu-overflow"></button>
@@ -266,7 +266,7 @@
 
             </a>
             <hr>
-            <!-- end item --> 
+            <!-- end item -->
 
             <!-- item -->
             <a class="flex flex-row items-center justify-start px-4 py-4 block capitalize font-medium text-sm tracking-wide bg-white hover:bg-gray-200 transition-all duration-300 ease-in-out" href="#">
@@ -319,10 +319,10 @@
                 view all
               </a>
             </div>
-            <!-- end bottom -->            
+            <!-- end bottom -->
           </div>
         </div>
-        <!-- end messages -->               
+        <!-- end messages -->
 
 
       </div>
@@ -336,10 +336,10 @@
 
 <!-- strat wrapper -->
 <div class="h-screen flex flex-row flex-wrap">
-  
+
     <!-- start sidebar -->
   <div id="sideBar" class="relative flex flex-col flex-wrap bg-white border-r border-gray-300 p-6 flex-none w-64 md:-ml-64 md:fixed md:top-0 md:z-30 md:h-screen md:shadow-xl animated faster">
-    
+
 
     <!-- sidebar content -->
     <div class="flex flex-col">
@@ -356,7 +356,7 @@
 
       <!-- link -->
       <a href="./index.html" class="mb-3 capitalize font-medium text-sm hover:text-teal-600 transition ease-in-out duration-500">
-        <i class="fad fa-chart-pie text-xs mr-2"></i>
+      <i class="bi bi-collection"></i>
        Collection Schedules
       </a>
       <!-- end link -->
@@ -479,7 +479,7 @@
 <!--      </a>-->
 <!--      &lt;!&ndash; end link &ndash;&gt;-->
 <!--      -->
-      
+
 
     </div>
     <!-- end sidebar content -->
@@ -488,9 +488,9 @@
   <!-- end sidbar -->
 
   <!-- strat content -->
-  <div class="bg-gray-100 flex-1 p-6 md:mt-16"> 
+  <div class="bg-gray-100 flex-1 p-6 md:mt-16">
 
-    
+
     <!-- General Report -->
     <div class="grid grid-cols-4 gap-6 xl:grid-cols-1">
 
@@ -962,7 +962,7 @@
 
 </div>
     <!-- end quick Info -->
-        
+
 
   </div>
   <!-- end content -->
