--- a/templates/payment_form.html
+++ b/templates/payment_form.html
@@ -180,6 +180,8 @@
             ></div>
             <div class="my-4">
               <button
+              name="Amount"
+               value="{{ contributions.0.amount_collected }}"
                 type="submit"
                 class="btn btn-primary text-uppercase w-100"
               >
