--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -1,52 +1,137 @@
-{% extends 'admin_index.html' %}
+{% extends 'admin_index.html' %} {% block content %}
+<link
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+  rel="stylesheet"
+  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+  crossorigin="anonymous"
+/>
+<style>
+  @import url(https://unpkg.com/@webpixels/css@1.1.5/dist/index.css);
 
-{% block content %} 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<div
-  class="page-wrapper"
-  id="main-wrapper"
-  data-layout="vertical"
-  data-navbarbg="skin6"
-  data-sidebartype="full"
-  data-sidebar-position="fixed"
-  data-header-position="fixed"
->
-  <div
-    class="position-relative overflow-hidden radial-gradient min-vh-100 d-flex align-items-center justify-content-center"
-  >
-    <div class="d-flex align-items-center justify-content-center w-100">
-      <div class="row justify-content-center w-100">
-        <div class="col-md-6 col-lg-8 col-xxl-6">
-          <div class="card mb-0">
-            <div class="card-body">
-              <p class="text-center">Update Profile</p>
-              <form action="update_profile" method="post" enctype="multipart/form-data">
-                {% csrf_token %}
-                <div class="mb-3">
-                  <label for="exampleInputName" class="form-label">Name</label>
-                  <input name="name" type="text" class="form-control" id="exampleInputName" aria-describedby="nameHelp" value="{{ user.0.name }}">
+  /* Bootstrap Icons */
+  @import url("https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.4.0/font/bootstrap-icons.min.css");
+</style>
+
+<main class="py-6 bg-surface-secondary">
+  <div class="container">
+    <!-- Card stats -->
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 mb-6">
+      <div class="col-xl-3 col-sm-6 col-12">
+        <div class="card shadow border-0">
+          <div class="card-body">
+            <div class="row">
+              <div class="col">
+                <span class="h6 font-semibold text-muted text-sm d-block mb-2"
+                  >Collected Plastics</span
+                >
+                <span class="h3 font-bold mb-0"
+                  >{{ total_plastic_amount }}</span
+                >
+              </div>
+              <div class="col-auto">
+                <div
+                  class="icon icon-shape bg-tertiary text-white text-lg rounded-circle"
+                >
+                  <i class="bi bi-collection"></i>
                 </div>
-                <div class="mb-3">
-                  <label for="exampleInputPhone" class="form-label">Phone</label>
-                  <input name="phone" type="text" class="form-control" id="exampleInputPhone" aria-describedby="phoneHelp" value="{{ user.0.phone }}">
+              </div>
+            </div>
+            <div class="mt-2 mb-0 text-sm">
+              <span class="text-nowrap text-xs text-muted"
+                >Present Overview</span
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-3 col-sm-6 col-12">
+        <div class="card shadow border-0">
+          <div class="card-body">
+            <div class="row">
+              <div class="col">
+                <span class="h6 font-semibold text-muted text-sm d-block mb-2"
+                  >No. shedules</span
+                >
+                <span class="h3 font-bold mb-0"> {{ number_of_schedule}}</span>
+              </div>
+              <div class="col-auto">
+                <div
+                  class="icon icon-shape bg-warning text-white text-lg rounded-circle"
+                >
+                  <i class="bi bi-clock-history"></i>
                 </div>
-                <div class="mb-3">
-                  <label for="exampleInputEmail1" class="form-label">Email address</label>
-                  <input name="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" value="{{ user.0.email }}">
+              </div>
+            </div>
+            <div class="mt-2 mb-0 text-sm">
+              <span class="text-nowrap text-xs text-muted"
+                >Present Overview</span
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-3 col-sm-6 col-12">
+        <div class="card shadow border-0">
+          <div class="card-body">
+            <div class="row">
+              <div class="col">
+                <span class="h6 font-semibold text-muted text-sm d-block mb-2"
+                  >Total Revenue</span
+                >
+                <span class="h3 font-bold mb-0">₹ {{ total_amount }}</span>
+              </div>
+              <div class="col-auto">
+                <div
+                  class="icon icon-shape bg-info text-white text-lg rounded-circle"
+                >
+                  <i class="bi bi-currency-rupee"></i>
                 </div>
-                <div class="mb-3">
-                  <label for="exampleInputImage" class="form-label">Image</label>
-                  <input name="image" type="file" class="form-control" id="exampleInputImage" aria-describedby="imageHelp" >
-                
+              </div>
+            </div>
+            <div class="mt-2 mb-0 text-sm">
+              <span class="text-nowrap text-xs text-muted"
+                >Present Overview</span
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-3 col-sm-6 col-12">
+        <div class="card shadow border-0">
+          <div class="card-body">
+            <div class="row">
+              <div class="col">
+                <span class="h6 font-semibold text-muted text-sm d-block mb-2">
+                  Total Uers</span
+                >
+                <span class="h3 font-bold mb-0">{{ user_count }}</span>
+              </div>
+              <div class="col-auto">
+                <div
+                  class="icon icon-shape bg-primary text-white text-lg rounded-circle"
+                >
+                  <i class="bi bi-people"></i>
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-              </form>
-              
+              </div>
+            </div>
+            <div class="mt-2 mb-0 text-sm">
+              <span class="text-nowrap text-xs text-muted"
+                >Present Overview</span
+              >
             </div>
           </div>
         </div>
       </div>
     </div>
+    <div class="card shadow border-0 mb-7">
+      <div class="card-header">
+        <h5 class="mb-0">Performance Metrics</h5>
+      </div>
+      {% include 'chart.html' %}
+
+     
+    </div>
   </div>
-</div>
+</main>
+
 {% endblock %}
