--- a/templates/admin_index.html
+++ b/templates/admin_index.html
@@ -200,7 +200,7 @@
 
           <a
             style="text-decoration: none"
-            href="./index.html"
+            href="{% url 'admin_dashboard' %}"
             class="mb-3 text-black capitalize font-medium text-sm hover:text-teal-600 transition ease-in-out duration-500"
           >
             <i class="bi bi-border-all"></i>
@@ -218,7 +218,7 @@
 
           <a
             style="text-decoration: none"
-            href="./index.html"
+            href="{% url 'admin_view_payment_list' %}"
             class="mb-3 text-black capitalize font-medium text-sm hover:text-teal-600 transition ease-in-out duration-500"
           >
             <i class="bi bi-currency-rupee"></i>
@@ -249,14 +249,7 @@
           <i class="bi bi-calendar-date-fill"></i>
           Collection Shedule
         </a>
-          <a
-            style="text-decoration: none"
-            href="./email.html"
-            class="mb-3 text-black capitalize font-medium text-sm hover:text-teal-600 transition ease-in-out duration-500"
-          >
-            <i class="bi bi-clock-history"></i>
-            Payment History
-          </a>
+        
           
           <!-- End Sidebar Links -->
         </div>
