--- a/templates/payment_success.html
+++ b/templates/payment_success.html
@@ -1,4 +1,39 @@
 {% extends 'user_base.html' %} {% block content %}
 
-Success 
+<html>
+  <head>
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+    crossorigin="anonymous"
+  />  </head>
+    <style>
+   
+       
+      .checkmark {
+        color: #9ABC66;
+        font-size: 100px;
+        line-height: 200px;
+        margin-left:50px;
+      }
+      .card {
+        background: white;
+        padding: 60px;
+        border-radius: 4px;
+        box-shadow: 0 2px 3px #C8D0D8;
+        display: inline-block;
+        margin: 0 auto;
+      }
+    </style>
+    <body>
+      <div style="margin-top: 5%; margin-left: 30%;" class="card">
+      <div style="border-radius:200px; height:200px; width:200px; background: #F8FAF5; margin:0 auto;">
+        <i class="checkmark">✓</i>
+      </div>
+        <h1 style="margin-left: 25px;">Success</h1> 
+        <p>We received your payment;<br/></p>
+      </div>
+    </body>
+</html>
 {% endblock %}
