--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -37,6 +37,33 @@
     </tbody>
   </table>
   <h1>Payment History</h1>
+  <table class="table table-striped table-hover">
+    <thead>
+      <tr>
+        <th scope="col">Sl No</th>
+        <th scope="col">Payment Id</th>
+        <th scope="col">Name </th>
+        <th scope="col">Date </th>
+        <th scope="col">Amount </th>
+        <th scope="col">Address</th>
+        <th scope="col">Zip Code</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for payment in payments %}
+      <tr>
+        <td>{{forloop.counter}}</td>
+
+        <td>{{ payment.payment_id }}</td>
+        <td >{{ payment.nameOnCard }}</td>
+        <td>{{ payment.date }}</td>
+        <td style="color: rgb(188, 32, 11)">{{ payment.Amount }}</td>
+        <td>{{ payment.streetAddress }}</td>
+        <td>{{ payment.zipCode }}</td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
   <h1>Plastic Contribution</h1>
   <table class="table table-striped table-hover">
     <thead>
