--- a/templates/add_collection_shedule.html
+++ b/templates/add_collection_shedule.html
@@ -1,6 +1,10 @@
-{% extends 'admin_index.html' %} 
-{% block content %}
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+{% extends 'admin_index.html' %} {% block content %}
+<link
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+  rel="stylesheet"
+  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+  crossorigin="anonymous"
+/>
 <div
   class="page-wrapper"
   id="main-wrapper"
@@ -19,24 +23,75 @@
           <div class="card mb-0">
             <div class="card-body">
               <p class="text-center">Add Collection Shedule</p>
-              <form action="add_collection_shedule" method="post" >
+              <form action="add_collection_shedule" method="post">
                 {% csrf_token %}
                 <div class="mb-3">
-                  <label for="exampleInputName" class="form-label">PLace</label>
-                  <input name="place" type="text" class="form-control" id="exampleInputName" aria-describedby="nameHelp" value="{{ user.0.name }}">
+                  <label for="staff" class="form-label">Staff</label>
+                  <select
+                    name="staff"
+                    class="form-select"
+                    id="staff"
+                    aria-describedby="staffHelp"
+                  >
+                    {% for staff_member in user %} 
+                    {% if staff_member.role == 'staff' %}
+                    {{staff_member}}
+                    <option value="{{ staff_member.user.id }}">
+                      {{ staff_member.name }}
+                    </option>
+                    {% endif %} {% endfor %}
+                  </select>
+                </div>
+                <div class="mb-3">
+                  <label for="staff" class="form-label">User</label>
+                  <select
+                    name="user"
+                    class="form-select"
+                    id="user"
+                    aria-describedby="staffHelp"
+                  >
+                    {% for user in user %}
+                     {% if user.role == 'user' %} {{user}}
+                    <option value="{{ user.user.id }}">{{ user.name }}</option>
+                    {% endif %} {% endfor %}
+                  </select>
+                </div>
+
+                <div class="mb-3">
+                  <label for="exampleInputName" class="form-label">Place</label>
+                  <input
+                    name="place"
+                    type="text"
+                    class="form-control"
+                    id="exampleInputName"
+                    aria-describedby="nameHelp"
+                  />
                 </div>
                 <div class="mb-3">
                   <label for="exampleInputPhone" class="form-label">Date</label>
-                  <input name="date" type="date" class="form-control" id="exampleInputPhone" aria-describedby="phoneHelp" value="{{ user.0.phone }}">
+                  <input
+                    name="date"
+                    type="date"
+                    class="form-control"
+                    id="exampleInputPhone"
+                    aria-describedby="phoneHelp"
+                  />
                 </div>
                 <div class="mb-3">
-                  <label for="exampleInputEmail1" class="form-label">Time</label>
-                  <input name="time" type="time" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" value="{{ user.0.email }}">
+                  <label for="exampleInputEmail1" class="form-label"
+                    >Time</label
+                  >
+                  <input
+                    name="time"
+                    type="time"
+                    class="form-control"
+                    id="exampleInputEmail1"
+                    aria-describedby="emailHelp"
+                  />
                 </div>
-                
+
                 <button type="submit" class="btn btn-primary">Add</button>
               </form>
-              
             </div>
           </div>
         </div>
